Make LinkedList sturcture